user new change

--- a/templates/list.html
+++ b/templates/list.html
@@ -25,7 +25,7 @@ $for p in page_posts:
 	<tr>
 		 <td title="$p['title']"><a href="/view/$p['id']">$trim_utf8(p['title'], 25)</a></td>
 		 <td><a href="/user/$p['userid']">$p['username']</a></td>
-		 <td>$p['comment_count']</td>
+		 <td>$p['click_count']</td>
 		 <td>$p['comment_count']</td>
 		 <td>$p['last_time']</td>
 	</tr>
