--- a/templates/edit.html
+++ b/templates/edit.html
@@ -12,6 +12,13 @@ $def with(post)
             <span id="for_title" class="validate_tip"></span>
         </td>
     </tr>
+     <div id = bankuai style="width: 600px;margin-top: 20px;margin-bottom: 20px;">板块
+        <select id = "part">
+            <option value="a">帮迅哥征友</option>
+            <option value="b">帮clb征友</option>
+            <option value="b">帮倪神征友</option>
+        </select>
+    </div>
     <tr>
         <td><label for="content">内容</label></td>
         <td>
