--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,6 +1,19 @@
-$def with (username, picture, description)
+$def with (username, picture, description,posts)
 <ul id="user_profile">
 	<li><h3>$username</h3></li>
 	<li><img id="show_picture" src="$picture" alt="头像" /></li>
     <li><div>$description</div></li>
 </ul>
+<table id="account_posts">
+<tbody>
+    <tr>
+        <th id="title">标题</th>
+        <th id="time">发布时间</th>
+
+$for p in posts:
+    <tr>
+        <td title="$p['title']"><a href="/view/$p['id']">$trim_utf8(p['title'], 25)</a></td>
+        <td>$p['time']</td>
+    </tr>
+</tbody>
+</table>
