--- a/templates/register.html
+++ b/templates/register.html
@@ -18,6 +18,22 @@ $def with ()
         <td><label for="password_again">密码确认</label></td>
         <td><input type="password" id="password_again" name="password_again" /><span class="validate_tip"></span></td>
     </tr>
+    <tr>
+        <td><label for="nickname">昵称</label></td>
+        <td><input type="nickname" id="nickname" name="nickname" /><span class="validate_tip"></span></td>
+    </tr>
+    <tr>
+        <td><label for="brithday">生日</label></td>
+        <td><input type="brithday" id="brithday" name="brithday" /><span class="validate_tip"></span></td>
+    </tr>
+    <tr>
+        <td><label for="gender">生日</label></td>
+        <td><input type="gender" id="gender" name="gender" /><span class="validate_tip"></span></td>
+    </tr>
+    <tr>
+        <td><label for="age">年龄</label></td>
+        <td><input type="age" id="age" name="age" /><span class="validate_tip"></span></td>
+    </tr>
     <tr><td><input type="submit" id="register_btn" value="注册" /></td></tr>
 </tbody>
 </table>
